# origin

./: README.md  pyproject.toml
docs/: architecture.md  cli-reference.md  integration-guide.md  license-taxonomy.md
examples/: README.md  basic_usage.py  cli_workflow.py  compliance_audit.py  csv_data_pipeline.py  custom_data_loader.py  export_formats.py  huggingface_nlp.py  license_conflict_detection.py  multi_source_training.py  pytorch_training.py
src/origin/: __init__.py
src/origin/cards/: __init__.py  generator.py  templates.py
src/origin/cli/: __init__.py  commands.py  main.py
src/origin/core/: __init__.py  fingerprint.py  license.py  record.py
src/origin/export/: __init__.py  formats.py
src/origin/hooks/: __init__.py  base.py  huggingface.py  pytorch.py
src/origin/query/: __init__.py  engine.py
src/origin/storage/: __init__.py  database.py  schema.py
tests/: __init__.py  test_cards.py  test_cli.py  test_export.py  test_fingerprint.py  test_hooks.py  test_license.py  test_query.py  test_storage.py
tests/fixtures/: __init__.py  sample_data.py  sample_licenses.py
